static/css/kapchan.css
:root {
  --background: #15191d;
  --surface: #212529;
  --primary: #FF4500;
  --on-background: #ffffff;
  --on-surface: #ffffff;
  --on-primary: #ffffff;
}

@font-face {
  font-family: "Exo2";
  src: url(/static/fonts/Exo2-VariableFont_wght.ttf) format("truetype");
}

* {
  margin: 0;
  box-sizing: border-box;
}

a, button {
  all: unset;
  cursor: pointer;
}

img {
  width: 100%;
  height: auto;
  object-fit: contain;
}

body {
  display: grid;
  grid-template-rows: min-content 1fr min-content;
  background-color: var(--background);
  font-family: Exo2;
}

/*------------------------- components/header.stpl ---------------------------*/

.main-header {
  grid-row: 1;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
  color: var(--on-surface);
  background-color: var(--surface);
  box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 15px;
  position: sticky;
  top: 0;
  height: 80px;
  z-index: 4;
}

.kapakka {
  font-size: 40px;
  font-weight: 600;
  cursor: pointer;
  color: var(--primary);
}

.navbar {
  display: flex;
  gap: 20px;
}

.navbar-mobile {
  display: none;
  height: 100%;
  max-height: 30px;
}

.mobile-menu {
  display: none;
  flex-direction: column;
  gap: 15px;
  width: 100%;
  max-width: 300px;
  height: 100vh;
  background-color: var(--surface);
  position: absolute;
  z-index: 5;
  top: 0;
  right: 0;
  padding: 15px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  overflow-y:auto
}

.mobile-canvas {
  display: none;
  position: absolute;
  z-index: 4;
  top: 0;
  right: 0;
  height: 100vh;
  width: 100vw;
}

.mobile-menu-close {
  display: flex;
  height: 30px;
}

.svg-m {
  display: flex;
  align-items: center;
  gap: 15px;
  height: 30px;
  font-size: 16px;
}

.svg-a {
  display: flex;
  flex-direction: column;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  max-height: 40px;
}

.svg-a:hover {
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.icon {
  height: 100%;
  width: auto;
}

.inactive {
  color: var(--background);
}

.divider {
  width: 1px;
  background-color: white;
}

.h-divider {
  height: 1px;
  background-color: white;
}

@media only screen and (max-width: 768px) {
  .main-header {
    height: 60px;
    padding: 0 15px;
  }

  .kapakka {
    font-size: 30px;
  }

  .navbar {
    display: none;
  }

  .navbar-mobile {
    display: flex;
  }
}

/*----------------------------------------------------------------------------*/

.content {
  grid-row: 2;
  min-height: 100vh;
}

@media only screen and (max-width: 768px) {
  .content {
    min-height: 100vh;
  }
}

/*------------------------- components/footer.stpl ---------------------------*/

.footer {
  grid-row: 3;
  display: flex;
  justify-content: center;
  gap: 10px;
  color: var(--on-background);
  margin: 10px;
  font-size: 14px;
}

/*------------------------------- index.stpl ---------------------------------*/

.index {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

.selector {
  display: flex;
  gap: 10px;
  overflow-x: auto;
  padding: 10px 0px;
  scrollbar-width: none;
  user-select: none;
  z-index: 1;
  width: 100%;
  mask-image: linear-gradient(90deg, #000 90%, transparent);
}

.reply-btn,
.selector-btn--active,
.selector-btn--inactive,
.selector-btn {
  flex: 0 0 auto;
  padding: 6px 10px 6px 10px;
  border-radius: 7px;
}

.reply-btn,
.selector-btn {
  display: flex;
  align-items: center;
  gap: 5px;
  color: white;
  background-color:var(--surface);
  cursor: pointer;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 5px;
}

.selector-btn--active {
  color: var(--background);
  background-color: white;
}

.selector-btn--inactive {
  color: gray;
  background-color:#212121;
}

.nsfw-marker {
  color: var(--primary);
  font-size: 14px;
}

.logo {
  width: calc(100% - 30px);
  max-width: 600px;
  margin: 40px 0px;
  height: auto;
  object-fit: contain;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.card-index {
  width: calc(100vw - 30px);
  max-width: 1200px;
}

.card {
  padding: 15px;
  color: var(--on-surface);
  background-color: var(--surface);
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.post-preview {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.sub-header {
  color: var(--on-background);
}

.board-n {
  color: var(--primary);
}

.kapakka-desc {
  font-size: 18px;
  text-align: center;
}

@media only screen and (max-width: 768px) {
  .selector {
    display: none;
  }

  .logo {
    margin: 15px 0px;
  }

  .kapakka-desc {
    font-size: 14px;
  }
}

/*------------------------------- board.stpl ---------------------------------*/

.board-selector {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  width: 100vw;
  padding: 0px 20px
}

.reply-btn,
.post-btn {
  margin: 10px 0px;
}

.board-head {
  display: flex;
  padding: 0px 20px;
  white-space: pre-line;
  word-break: break-word;
}

.board-head-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  color: var(--on-surface);
  background-color: var(--surface);
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  width: calc(100vw - 40px);
  border-radius: 5px;
  padding: 10px;
}

.catalog {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  gap: 10px;
  padding: 10px 20px;
}

.post {
  background-color: var(--surface);
  padding: 10px;
  width: 100%;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  min-width: 0;
  position: relative;
}

.icon-overlay {
  height: 25px;
  width: auto;
  position: absolute;
  z-index: 4;
  color: var(--primary);
  display: flex;
  gap: 3px;
}

.icon-overlay-item {
  padding: 5px;
  background-color: var(--background);
  border-radius: 5px;
}

.post-body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 115px;
}
/* ... */

